
Thu Jan 20 12:00:45 CET 2005 Paolo Molaro <lupus@ximian.com>

	* mini.c, cfold.c, basic-calls.cs: preserve side effects
	on cond branch optimization (fixes bug# 71515).

2005-1-20  Massimiliano Mantione  <massi@ximian.com>

	abcremoval.c: Fixed bug 71062.
	abcremoval.h: Likewise.

2005-1-20  Massimiliano Mantione  <massi@ximian.com>

	* mini.c: Added a new functionality to optimize_branches, the removal
	of useless basic blocks, and fixed some problem in the removal of
	critical edges; some utility functions added for both purposes.
	* ssapre.c: Added complex expression support, and fixed bug 70637.
	* ssapre.h: Likewise.
	* ssapre-cee-ops.h: Added file with list of "CEE_*" opcodes
	enabled in SSAPRE.
	* ssapre-mini-ops.h: Likewise, but for "OP_*" opcodes.
	* driver.c: Re-enabled SSAPRE.

2005-01-19  Martin Baulig  <martin@ximian.com>

	* mini.c (mono_method_to_ir): Call mono_get_inflated_method() on
	the result of mono_get_method_constrained().

2005-01-18  Neale Ferguson <NealeFerguson@earthlink.net>

	* exceptions-s390.c tramp-s390.c: Allocate code using the global code
	manager.

2005-01-18  Geoff Norton  <gnorton@customerdna.com>

	* jit-icalls.c (mono_llmult_ovf): Fix other overflow conditions to
	be detected.  Fixes #59296.

2005-01-18  Zoltan Varga  <vargaz@freemail.hu>

	* mini-amd64.c (mono_arch_output_basic_block): Remove some assertions
	which can happen. Fixes #71361.

2005-01-18  Zoltan Varga  <vargaz@freemail.hu>

	* exceptions-sparc.c tramp-sparc.c: Allocate code using the global code
	manager.

2005-01-17  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_create_jump_trampoline): Revert last change as it causes
	appdomain-unload.exe to fail.
	
	* mini.c: Fix some memory leaks.

Mon Jan 17 16:16:23 CET 2005 Paolo Molaro <lupus@ximian.com>

	* inssel.brg: handle the new size of rank, idepth, max_interface_id.
	Fixed bug and sped up some codepaths.

2005-01-17  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c: Fix some memory leaks.
