@@ -1,3 +1,8 @@
+2005-1-20  Massimiliano Mantione  <massi@ximian.com>
+
+	* ssapre.c: Turned usage of snprintf to GString.
+	* ssapre.h: disabled MONO_APPLY_SSAPRE_TO_SINGLE_METHOD
+	(I left it on by mistake in my previous commit).
 
 Thu Jan 20 12:00:45 CET 2005 Paolo Molaro <lupus@ximian.com>
 
@@ -6,8 +11,8 @@ Thu Jan 20 12:00:45 CET 2005 Paolo Molaro <lupus@ximian.com>
 
 2005-1-20  Massimiliano Mantione  <massi@ximian.com>
 
-	abcremoval.c: Fixed bug 71062.
-	abcremoval.h: Likewise.
+	* abcremoval.c: Fixed bug 71062.
+	* abcremoval.h: Likewise.
 
 2005-1-20  Massimiliano Mantione  <massi@ximian.com>
 
